chore(Commitar): salvar rápido porque tem que sair agora

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <a class="nav-link" href='@Url.Action("JogosDisponiveis", "Relatorio")'>Jogos Disponíveis</a>
                     </li>
                     <li>
+                        <a class="nav-link" href='@Url.Action("Devolucao", "Devolucao")'>Devolver jogo</a>
+                    </li>
+                    <li>
                         <form class="nav-form form-filtro" action='@Url.Action("JogosDisponiveis", "Relatorio")' method="get">
                             <input class="transparente texto-busca" type="text" placeholder="Digite sua busca" name="nome" />
                             <input class="botao-busca" type="submit" value="" />
