--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Locacao/Locacao.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Locacao/Locacao.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="preview-locacao">
-    <h1>Locacao</h1>
+    <h1>Locação</h1>
     <div class="container">
         <div class="row">
             @Html.Partial("_PreviewLocacao", Model)
