--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
@@ -3,17 +3,11 @@
     ViewBag.Title = "Jogos Disponíveis";
 }
 
-@{
-    bool temMensagemParaMostrar = TempData["Mensagem"] != null;
-    if (temMensagemParaMostrar)
-    {
-        <h1>@TempData["Mensagem"]</h1>
-    }
-}
+@Html.Partial("_Mensagem")
 
 <div class="container">
     <div class="row" style="margin: 30px 0px;">
-        <div class="col-md-4 col-md-push-2"><h2>TSG Games</h2></div>
+        <div class="col-md-4"><h2>TSG Games</h2></div>
         <div class="col-md-1 col-md-push-5">
             <button class="shiny-button" onclick="location.href='@Url.Action("Manter", "Jogo")'">Criar jogo</button>
         </div>
