--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Devolucao/Devolucao.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Devolucao/Devolucao.cshtml
@@ -13,7 +13,7 @@
                 @Html.ValidationSummary(false)
 
                 <label for="nomeJogo" class="control-label">Jogo</label>
-                <input type="text" class="form-control devolucao-busca" name="nomeJogo" id="locacaoNomeJogo" />
+                <input type="text" class="form-control devolucao-busca" name="nomeJogo" id="locacaoNomeJogo" autofocus />
 
                 <div class="form-horizontal botao-devolver">
                     <div class="col-md-offset-4 col-md-2">
