--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Home/Index.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="row">
-        <img class="col-md-10 col-md-push-1" src="@Url.Content("~/Content/Images/tsg.jpg")" />
+        <img class="col-md-10 col-md-push-1" stye="margin-top: 30px;" src="@Url.Content("~/Content/Images/tsg.jpg")" />
     </div>
     <div class="row">
         <div class="col-md-10 col-md-push-1">
