--- a/src/modulo-05-java/lavanderia/src/main/resources/static/site.css
+++ b/src/modulo-05-java/lavanderia/src/main/resources/static/site.css
@@ -1,20 +1,14 @@
 @CHARSET "UTF-8";
 
 body {
-	background-color: white;
-	background-image: url("https://static.pexels.com/photos/366/wooden-laundry-washing-clothes-line.jpg");
+	margin: 0;
+	padding: 0;
 	background-size: 100%;
+	background-color: white;
 }
 
 .titulo {
 	font-size: 40px;
-}
-
-.bg-blur {
-	height: 100%;
-	width: 100%;
-	float: left;
-	-webkit-filter: blur(10px);
 }
 
 .mensagem {
@@ -24,15 +18,19 @@ body {
 
 .container {
 	padding: 15px;
-	width: 66.67%;
-	margin-left: 16.665%;
-	background-color: #f1f1f1;
+	width: 66.66666666666667%;
+	margin-left: 16.66666666666667%;
+	margin-top: 5%;
 	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.6);
 	height: auto;
+	overflow: hidden;
+	position: relative;
+	z-index: 100;
+	background: rgba(34, 34, 34, 0.75);
 }
 
 .offset {
-	margin-left: 16.665%;
+	margin-left: 16.66666666666667%;
 }
 
 .footer {
@@ -40,8 +38,48 @@ body {
 	font-weight: bold;
 	font-size: 12px;
 	margin-top: 15px;
+}
 
-	/* 	background: -moz-linear-gradient(top, #6db3f2 0%, #1e69de 100%); */
-	/* 	background: -webkit-linear-gradient(top, #6db3f2 0%, #1e69de 100%); */
-	/* 	background: linear-gradient(to bottom, #6db3f2 0%, #1e69de 100%); */
+body, .container-bg {
+	background-image:
+		url('http://photos3.zillowstatic.com/i_g/IS1nysjru1ze6q0000000000.jpg');
+	background-attachment: fixed;
+}
+
+.container-bg {
+	background-size: 100%;
+	position: absolute;
+	left: -27%;
+	width: 150%;
+	z-index: -99;
+	top: -2.5%;
+	right: 0px;
+	bottom: 0px;
+	-webkit-filter: blur(10px);
+}
+
+.navbar {
+	color: #f1f1f1;
+	height: 50px;
+	background-color: rgba(0, 0, 0, 0.85);
+	padding-top: 15px;
+	padding-left: 30px;
+	border-bottom: 2px solid #ccc;
+}
+
+.navbar li {
+	margin: 5px 15px;
+}
+
+.navbar .menu, .navbar h1, .navbar .menu li {
+	display: inline;
+}
+
+.navbar .menu {
+	list-style: none;
+}
+
+.navbar h1:hover {
+	color: #ccc;
+	cursor: pointer;
 }
