--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/index.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/index.html
@@ -6,10 +6,24 @@
 <link rel="stylesheet" type="text/css" href="site.css" />
 </head>
 <body>
-	<div class="bg-blur"></div>
+	<div class="navbar">
+		<h1 class="logo">Lavanderia</h1>
+
+		<ul class="menu">
+			<li>Home</li>
+			<li>Serviços</li>
+			<li>Sobre</li>
+			<li>Contato</li>
+		</ul>
+	</div>
 	<div class="container">
+		<div class="container-bg"></div>
 		<h1 class="titulo">Home</h1>
 		<h2 class="mensagem" th:text="${mensagem}"></h2>
+		<div class="offset">
+			<img
+				src="http://planejadosinbox.cia.tv/wp-content/uploads/2015/08/lavanderias-para-o-que-te-queremos-6.jpg" />
+		</div>
 		<div class="offset">
 			<img
 				src="http://planejadosinbox.cia.tv/wp-content/uploads/2015/08/lavanderias-para-o-que-te-queremos-6.jpg" />
