--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/index.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 	<div class="navbar">
-		<h1 class="logo">Lavanderia</h1>
+		<h1 class="logo"><a href='#'>Lavanderia</a></h1>
 
 		<ul class="menu">
-			<li>Home</li>
-			<li>Serviços</li>
-			<li>Sobre</li>
-			<li>Contato</li>
+			<li><a href='#'>Home</a></li>
+			<li><a href='#'>Serviços</a></li>
+			<li><a href='#'>Sobre</a></li>
+			<li><a href='#'>Contato</a></li>
 		</ul>
 	</div>
 	<div class="container">
