feat(Exercício remover): implementar exercício proposto, incluindo extras

--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/edita.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/edita.html
@@ -54,7 +54,7 @@
 			</p>
 			
 			<p>
-				<label class="control-label">Endereco:</label> <input
+				<label class="control-label">Endereço:</label> <input
 					th:field="*{endereco}" type="text" />
 			</p>
 			
