--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/exibe.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/exibe.html
@@ -56,7 +56,7 @@
 			</p>
 
 			<p>
-				<label class="control-label">Endereco:</label> <input
+				<label class="control-label">Endereço:</label> <input
 					th:field="*{endereco}" type="text" disabled="true" />
 			</p>
 
