--- a/src/modulo-05-java/lavanderia/src/main/resources/static/site.css
+++ b/src/modulo-05-java/lavanderia/src/main/resources/static/site.css
@@ -3,6 +3,7 @@
 body {
 	margin: 0;
 	padding: 0;
+	font-family: georgia;
 	background-color: white;
 }
 
@@ -84,4 +85,141 @@ body, .container-bg {
 a {
 	color: inherit;
 	text-decoration: none;
+}
+
+table {
+	table-layout: fixed;
+}
+
+th, td {
+	padding: 0;
+	overflow: hidden;
+}
+
+td.border-default {
+	text-align: left;
+}
+
+td div, td {	
+	height: 25px;
+}
+
+.text-right {
+	text-align: right;
+}
+
+.text-center {
+	text-align: center;
+}
+
+.border-default {
+	border: 1px solid black;	
+	box-sizing: border-box;	
+}
+
+.icon-link-container img {
+	margin-top: 2px;
+	margin-left: 36%;
+	width: 18px;
+}
+
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9,
+	.col-10, .col-11, .col-12 {
+	float: left;
+}
+
+.col-1 {
+	width: 8.333333333333333%;
+}
+
+.col-2 {
+	width: 16.66666666666667%;
+}
+
+.col-3 {
+	width: 25%;
+}
+
+.col-4 {
+	width: 33.333333333333333%;
+}
+
+.col-5 {
+	width: 41.66666666666667%;
+}
+
+.col-6 {
+	width: 50%;
+}
+
+.col-7 {
+	width: 58.333333333333333%;
+}
+
+.col-8 {
+	width: 66.66666666666667%;
+}
+
+.col-9 {
+	width: 75%;
+}
+
+.col-10 {
+	width: 83.333333333333333%;
+}
+
+.col-11 {
+	width: 91.66666666666667%;
+}
+
+.col-12 {
+	width: 100%;
+}
+
+.col-offset-1 {
+	margin-left: 8.333333333333333%;
+}
+
+.col-offset-2 {
+	margin-left: 16.66666666666667%;
+}
+
+.col-offset-3 {
+	margin-left: 25%;
+}
+
+.col-offset-4 {
+	margin-left: 33.333333333333333%;
+}
+
+.col-offset-5 {
+	margin-left: 41.66666666666667%;
+}
+
+.col-offset-6 {
+	margin-left: 50%;
+}
+
+.col-offset-7 {
+	margin-left: 58.333333333333333%;
+}
+
+.col-offset-8 {
+	margin-left: 66.66666666666667%;
+}
+
+.col-offset-9 {
+	margin-left: 75%;
+}
+
+.col-offset-10 {
+	margin-left: 83.333333333333333%;
+}
+
+.col-offset-11 {
+	margin-left: 91.66666666666667%;
+}
+
+.col-offset-12 {
+	margin-left: 100%;
 }
