--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/remove.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/remove.html
@@ -20,52 +20,55 @@
 	</div>
 	<div class="container">
 		<div class="container-bg"></div>
-		<h1 class="titulo">Cliente - incluir</h1>
+		<h1 class="titulo">Cliente - Remover</h1>
 
-		<form th:action="@{/clientes/incluir}" th:object="${cliente}"
+		<form th:action="@{/clientes/remover}" th:object="${cliente}"
 			method="post">
 
+			<input th:field="*{id}" type="hidden" />
 
 			<p>
 				<label class="control-label">Nome:</label> <input th:field="*{nome}"
-					type="text" />
+					type="text" disabled="true" />
 			</p>
 
 			<p>
 				<label class="control-label">CPF:</label> <input th:field="*{cpf}"
-					type="text" />
+					type="text" disabled="true" />
 			</p>
 
 			<p>
 				<label class="control-label">E-mail:</label> <input
-					th:field="*{email}" type="text" />
+					th:field="*{email}" type="text" disabled="true" />
 			</p>
 
 			<label class="control-label">Cidade: </label> <select
-				th:field="*{idCidade}">
+				th:field="*{idCidade}" disabled="true" >
 				<option th:each="c : ${cidades}" th:text="${c.nome}"
 					th:value="${c.idCidade}"></option>
 			</select>
 
 			<p>
 				<label class="control-label">Bairro:</label> <input
-					th:field="*{bairro}" type="text" />
+					th:field="*{bairro}" type="text" disabled="true" />
 			</p>
 
 			<p>
-				<label class="control-label">Endereço:</label> <input
-					th:field="*{endereco}" type="text" />
+				<label class="control-label">Endereco:</label> <input
+					th:field="*{endereco}" type="text" disabled="true" />
 			</p>
 
 			<p>
 				<label class="control-label">CEP:</label> <input th:field="*{cep}"
-					type="text" />
+					type="text" disabled="true" />
 			</p>
 
-			<button type="submit">Salvar</button>
+			<h2>A operação deve mesmo ser executada?</h2>
+
+			<button type="submit">Remover</button>
+			<button th:href="${'/clientes'}" >Cancelar</button>
 
 		</form>
-
 	</div>
 
 	<footer class="footer">
