--- a/src/modulo-05-java/lavanderia/src/main/resources/static/site.css
+++ b/src/modulo-05-java/lavanderia/src/main/resources/static/site.css
@@ -4,7 +4,12 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: georgia;
-	background-color: white;
+	background-color: #f1f1f1;
+}
+
+.content {
+	background-color: #fff;
+	border: 1px solid #ccc;
 }
 
 .titulo {
@@ -16,23 +21,6 @@ body {
 	width: 400px;
 }
 
-.container {
-	padding: 15px;
-	width: 66.66666666666667%;
-	margin-left: 16.66666666666667%;
-	margin-top: 5%;
-	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.6);
-	height: auto;
-	overflow: hidden;
-	position: relative;
-	z-index: 100;
-	background: rgba(34, 34, 34, 0.75);
-}
-
-.offset {
-	margin-left: 16.66666666666667%;
-}
-
 .footer {
 	margin: 0;
 	font-weight: bold;
@@ -40,51 +28,79 @@ body {
 	margin-top: 15px;
 }
 
-body, .container-bg {
-	background-image:
-		url('http://freedesignfile.com/upload/2013/02/Seamless-pattern-with-squares-vector-1.jpg');
-	background-attachment: fixed;
-}
-
-.container-bg {
-	position: absolute;
-	left: -27%;
-	width: 150%;
-	z-index: -99;
-	top: -2.5%;
-	right: 0px;
-	bottom: 0px;
-	-webkit-filter: blur(10px);
-}
-
-.navbar {
-	color: #f1f1f1;
-	height: 50px;
-	background-color: rgba(0, 0, 0, 0.85);
-	padding-top: 15px;
-	padding-left: 30px;
-	border-bottom: 2px solid #ccc;
-}
-
-.navbar li {
-	margin: 5px 15px;
-}
-
-.navbar .menu, .navbar h1, .navbar .menu li {
-	display: inline;
-}
-
-.navbar .menu {
+nav ul {
+	background: #efefef;
+	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);
+	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
+	background: -webkit-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
+	padding: 0;
+	border: 1px solid #ccc;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 	list-style: none;
+	position: relative;
+	display: inline-table;
+	margin-bottom: 0;
 }
 
-.navbar h1:hover {
-	color: #ccc;
+nav ul:after {
+	content: "";
+	clear: both;
+	display: block;
 }
 
-a {
-	color: inherit;
+nav ul li {
+	float: left;
+}
+
+nav ul li:hover {
+	background: #4b545f;
+	background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
+	background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
+	background: -webkit-linear-gradient(top, #4f5964 0%, #5f6975 40%);
+}
+
+nav ul li:hover a {
+	color: #fff;
+}
+
+nav ul li a {
+	display: block;
+	padding: 25px 40px;
+	color: #757575;
 	text-decoration: none;
+}
+
+nav ul ul {
+	background: #5f6975;
+	border-radius: 0px;
+	padding: 0;
+	position: absolute;
+	top: 100%;
+}
+
+nav ul ul li {
+	float: none;
+	border-top: 1px solid #6b727c;
+	border-bottom: 1px solid #575f6a;
+	position: relative;
+}
+
+nav ul ul li a {
+	padding: 15px 40px;
+	color: #fff;
+}
+
+nav ul ul li a:hover {
+	background: #4b545f;
+}
+
+nav ul ul {
+	display: none;
+}
+
+nav ul li:hover>ul {
+	display: block;
 }
 
 table {
@@ -100,7 +116,7 @@ td.border-default {
 	text-align: left;
 }
 
-td div, td {	
+td div, td {
 	height: 25px;
 }
 
@@ -113,14 +129,20 @@ td div, td {
 }
 
 .border-default {
-	border: 1px solid black;	
-	box-sizing: border-box;	
+	border: 1px solid black;
+	box-sizing: border-box;
 }
 
 .icon-link-container img {
 	margin-top: 2px;
 	margin-left: 36%;
 	width: 18px;
+}
+
+.cabecalho {
+	background-color: rgba(0, 0, 0, 0.65);
+	color: #f1f1f1;
+	border-bottom: 4px solid yellowgreen;
 }
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9,
