--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/exibe.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/exibe.html
@@ -6,20 +6,28 @@
 <link rel="stylesheet" type="text/css" href="../site.css" />
 </head>
 <body>
-	<div class="navbar">
-		<h1 class="logo">
-			<a href='#'>Lavanderia</a>
-		</h1>
 
-		<ul class="menu">
-			<li><a href='#'>Home</a></li>
+	<div class="col-12 cabecalho">
+
+		<div class="col-offset-2 col-4">
+			<h1>Lavanderia</h1>
+		</div>
+
+	</div>
+
+	<nav class="col-offset-2 col-8">
+		<ul class="col-12">
+			<li><a th:href="${'/'}">Home</a></li>
 			<li><a href='#'>Serviços</a></li>
+			<li><a href='#'>Exibir</a>
+				<ul>
+					<li><a th:href="${'/clientes'}">Clientes</a></li>
+				</ul></li>
 			<li><a href='#'>Sobre</a></li>
 			<li><a href='#'>Contato</a></li>
 		</ul>
-	</div>
-	<div class="container">
-		<div class="container-bg"></div>
+	</nav>
+	<div class="col-offset-2 col-8 content">
 		<h1 class="titulo">Cliente - Dados</h1>
 
 		<form th:object="${cliente}">
@@ -45,7 +53,7 @@
 			</p>
 
 			<label class="control-label">Cidade: </label> <select
-				th:field="*{idCidade}" disabled="true" >
+				th:field="*{idCidade}" disabled="true">
 				<option th:each="c : ${cidades}" th:text="${c.nome}"
 					th:value="${c.idCidade}"></option>
 			</select>
@@ -68,7 +76,7 @@
 		</form>
 	</div>
 
-	<footer class="footer">
+	<footer class="footer col-12">
 		<div>
 			<hr />
 			<h3 class="footer">&copy; 2015</h3>
