--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/novo.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/novo.html
@@ -6,20 +6,26 @@
 <link rel="stylesheet" type="text/css" href="../../site.css" />
 </head>
 <body>
-	<div class="navbar">
-		<h1 class="logo">
-			<a href='#'>Lavanderia</a>
-		</h1>
+	<div class="col-12 cabecalho">
 
-		<ul class="menu">
-			<li><a href='#'>Home</a></li>
+		<div class="col-offset-2 col-4">
+			<h1>Lavanderia</h1>
+		</div>
+
+	</div>
+	<nav class="col-offset-2 col-8">
+		<ul class="col-12">
+			<li><a th:href="${'/'}">Home</a></li>
 			<li><a href='#'>Serviços</a></li>
+			<li><a href='#'>Exibir</a>
+				<ul>
+					<li><a th:href="${'/clientes'}">Clientes</a></li>
+				</ul></li>
 			<li><a href='#'>Sobre</a></li>
 			<li><a href='#'>Contato</a></li>
 		</ul>
-	</div>
-	<div class="container">
-		<div class="container-bg"></div>
+	</nav>
+	<div class="col-offset-2 col-8 content">
 		<h1 class="titulo">Cliente - incluir</h1>
 
 		<form th:action="@{/clientes/incluir}" th:object="${cliente}"
@@ -68,7 +74,7 @@
 
 	</div>
 
-	<footer class="footer">
+	<footer class="footer col-12">
 		<div>
 			<hr />
 			<h3 class="footer">&copy; 2015</h3>
