--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
@@ -1,83 +1,65 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="Layout">
 <head>
 <meta charset="UTF-8" />
 <title>Insert title here</title>
-<link rel="stylesheet" type="text/css" href="../site.css" />
+<link rel="stylesheet" type="text/css" th:href="@{~/site.css}" />
 </head>
 <body>
-	<div class="col-12 cabecalho">
 
-		<div class="col-offset-2 col-4">
-			<h1>Lavanderia</h1>
-		</div>
+	<div layout:fragment="content">
 
-	</div>
+		<div class="col-offset-2 col-8 content">
 
-	<nav class="col-offset-2 col-8">
-		<ul class="col-12">
-			<li><a th:href="${'/'}">Home</a></li>
-			<li><a href='#'>Serviços</a></li>
-			<li><a href='#'>Exibir</a>
-				<ul>
-					<li><a th:href="${'/clientes'}">Clientes</a></li>
-				</ul></li>
-			<li><a href='#'>Sobre</a></li>
-			<li><a href='#'>Contato</a></li>
-		</ul>
-	</nav>
-	<div class="col-offset-2 col-8 content">
+			<div th:if="${mensagem != null} ">
+				<h1 th:text="${mensagem}" class="msg-suc"></h1>
+			</div>
 
-		<div th:if="${mensagem != null}">
-			<h1 th:text="${mensagem}"></h1>
-		</div>
+			<h1 class="titulo col-offset-1">Clientes</h1>
 
-		<h1 class="titulo">Clientes</h1>
+			<div th:if="${not #lists.isEmpty(clientes)}">
+				<table class="border-default col-offset-1 col-10">
 
-		<div th:if="${not #lists.isEmpty(clientes)}">
-			<table class="border-default col-offset-1 col-10">
+					<tr>
+						<th class="border-default col-3 text-left">Nome</th>
+						<th class="border-default col-2">CPF</th>
+						<th class="border-default col-4">E-mail</th>
+						<th class="border-default col-3">Ações</th>
+					</tr>
 
-				<tr>
-					<th class="border-default col-3">Nome</th>
-					<th class="border-default col-2">CPF</th>
-					<th class="border-default col-4">Email</th>
-					<th class="border-default col-3">Ações</th>
-				</tr>
+					<tr th:each="cliente : ${clientes}">
+						<td th:text="${cliente.nome}" class="border-default col-3"></td>
+						<td th:text="${cliente.cpf}"
+							class="border-default col-2 text-center"></td>
+						<td th:text="${cliente.email}"
+							class="border-default col-4 text-center"></td>
+						<td class="col-3">
 
-				<tr th:each="cliente : ${clientes}">
-					<td th:text="${cliente.nome}" class="border-default col-3"></td>
-					<td th:text="${cliente.cpf}" class="border-default col-2"></td>
-					<td th:text="${cliente.email}" class="border-default col-4"></td>
-					<td class="col-3">
+							<div class="border-default col-4 icon-link-container">
+								<a th:href="${'/clientes/' + cliente.id}"><img
+									src="http://www.honestmachines.com/images/icon_details.png"
+									title="detalhes" /></a>
+							</div>
+							<div class="border-default col-4 icon-link-container">
+								<a th:href="${'/clientes/editar/' + cliente.id}"><img
+									src="http://iconizer.net/files/Gnome_icons/orig/gtk-edit.png"
+									title="editar" /></a>
+							</div>
+							<div class="border-default col-4 icon-link-container">
+								<a th:href="${'/clientes/remover/' + cliente.id}"><img
+									src="http://findicons.com/files/icons/1033/retrofukation/24/edit_delete.png"
+									title="remover" /></a>
+							</div>
+						</td>
+					</tr>
 
-						<div class="border-default col-4 icon-link-container">
-							<a th:href="${'/clientes/' + cliente.id}"><img
-								src="http://www.honestmachines.com/images/icon_details.png"
-								title="detalhes" /></a>
-						</div>
-						<div class="border-default col-4 icon-link-container">
-							<a th:href="${'/clientes/editar/' + cliente.id}"><img
-								src="http://iconizer.net/files/Gnome_icons/orig/gtk-edit.png"
-								title="editar" /></a>
-						</div>
-						<div class="border-default col-4 icon-link-container">
-							<a th:href="${'/clientes/remover/' + cliente.id}"><img
-								src="http://findicons.com/files/icons/1033/retrofukation/24/edit_delete.png"
-								title="remover" /></a>
-						</div>
-					</td>
-				</tr>
-
-			</table>
+				</table>
+			</div>
 		</div>
 	</div>
 
-	<footer class="footer col-12">
-		<div>
-			<hr />
-			<h3 class="footer">&copy; 2015</h3>
-		</div>
-	</footer>
 </body>
 
 </html>
