--- a/src/modulo-05-java/lavanderia/src/main/resources/static/site.css
+++ b/src/modulo-05-java/lavanderia/src/main/resources/static/site.css
@@ -13,6 +13,20 @@ form p label {
 	padding-right: 10px;
 }
 
+.has-error {
+	box-shadow: 0 0 15px rgba(255,50,50,0.85);
+	border: 1px solid rgba(255,100,100,0.85);
+}
+
+.help-inline:before {
+	content: '*';
+}
+
+.help-inline {
+	font-size: 12px;
+	color: rgba(255,50,50,1);
+}
+
 .content {
 	background-color: #fff;
 	border: 1px solid #ccc;
