--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/novo.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/novo.html
@@ -19,21 +19,24 @@
 
 
 				<p>
-					<label class="control-label col-2" >Nome</label> <input th:classappend="${#fields.hasErrors('nome')} ? 'has-error'"
-						th:field="*{nome}" type="text" />
-						<span class="help-inline" th:errors="*{nome}"></span>
+					<label class="control-label col-2">Nome</label> <input
+						th:classappend="${#fields.hasErrors('nome')} ? 'has-error'"
+						th:field="*{nome}" type="text" /> <span class="help-inline"
+						th:errors="*{nome}"></span>
 				</p>
 
 				<p>
-					<label class="control-label col-2" >CPF</label> <input th:classappend="${#fields.hasErrors('cpf')} ? 'has-error'"
-						th:field="*{cpf}" type="text" />
-						<span class="help-inline" th:errors="*{cpf}"></span>
+					<label class="control-label col-2">CPF</label> <input
+						th:classappend="${#fields.hasErrors('cpf')} ? 'has-error'"
+						th:field="*{cpf}" type="text" /> <span class="help-inline"
+						th:errors="*{cpf}"></span>
 				</p>
 
 				<p>
-					<label class="control-label col-2" >E-mail</label> <input th:classappend="${#fields.hasErrors('email')} ? 'has-error'"
-						th:field="*{email}" type="text" />
-						<span class="help-inline" th:errors="*{email}"></span>
+					<label class="control-label col-2">E-mail</label> <input
+						th:classappend="${#fields.hasErrors('email')} ? 'has-error'"
+						th:field="*{email}" type="text" /> <span class="help-inline"
+						th:errors="*{email}"></span>
 				</p>
 
 				<p>
@@ -41,10 +44,9 @@
 						th:field="*{idCidade}">
 						<option th:each="c : ${cidades}" th:text="${c.nome}"
 							th:value="${c.idCidade}"></option>
-					</select>
-					<span class="help-inline" th:errors="*{idCidade}"></span>
+					</select> <span class="help-inline" th:errors="*{idCidade}"></span>
 				</p>
-				
+
 				<p>
 					<label class="control-label col-2">Bairro</label> <input
 						th:field="*{bairro}" type="text" />
@@ -56,8 +58,8 @@
 				</p>
 
 				<p>
-					<label class="control-label col-2">CEP</label> <input th:field="*{cep}"
-						type="text" />
+					<label class="control-label col-2">CEP</label> <input
+						th:field="*{cep}" type="text" />
 				</p>
 
 				<button type="submit">Salvar</button>
