--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/error.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/error.html
@@ -11,9 +11,19 @@
 
 	<div layout:fragment="content">
 		<div class="col-offset-2 col-8 content">
-			<h1>ERRO!!!</h1>
+			<h1 th:text="${timestamp}"></h1>
+
+			<h1 th:text="${status}"></h1>
+
+			<h1 th:text="${error}"></h1>
+
+			<div
+				th:if="${ex} or ${exception} or (${message} and ${message.length() != 0})">
+				<i th:text="${message}">message ...</i>
+			</div>
 		</div>
 	</div>
+
 </body>
 
 </html>
