feat(Projeto): implementar REQ003 e REQ004.

--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/exibe.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/exibe.html
@@ -18,8 +18,8 @@
 			<form th:object="${cliente}">
 
 				<p>
-					<label class="control-label col-2">ID</label> <input
-						th:field="*{id}" type="text" disabled="true" />
+					<label class="control-label col-2">Situação</label> <input
+						th:field="*{situacao}" type="text" disabled="true" />
 				</p>
 
 				<p>
