--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
@@ -19,22 +19,36 @@
 
 			<h1 class="titulo col-offset-1">Clientes</h1>
 
+
+			<div class="col-12">
+				<form method="GET">
+
+					<p>
+						<label class="control-label col-2">Nome</label> <input
+							name="term" type="text" />
+					</p>
+
+					<button type="submit">Buscar</button>
+
+				</form>
+			</div>
+
 			<div th:if="${not #lists.isEmpty(clientes)}">
 				<table class="border-default col-offset-1 col-10">
 
 					<tr>
-						<th class="border-default col-3 text-left">Nome</th>
+						<th class="border-default col-4 text-left">Nome</th>
 						<th class="border-default col-2">CPF</th>
-						<th class="border-default col-4">E-mail</th>
+						<th class="border-default col-3">Situação</th>
 						<th class="border-default col-3">Ações</th>
 					</tr>
 
 					<tr th:each="cliente : ${clientes}">
-						<td th:text="${cliente.nome}" class="border-default col-3"></td>
+						<td th:text="${cliente.nome}" class="border-default col-4"></td>
 						<td th:text="${cliente.cpf}"
 							class="border-default col-2 text-center"></td>
-						<td th:text="${cliente.email}"
-							class="border-default col-4 text-center"></td>
+						<td th:text="${cliente.situacao}"
+							class="border-default col-3 text-center"></td>
 						<td class="col-3">
 
 							<div class="border-default col-4 icon-link-container">
