--- a/src/modulo-05-java/lavanderia/src/main/resources/static/site.css
+++ b/src/modulo-05-java/lavanderia/src/main/resources/static/site.css
@@ -53,7 +53,7 @@ form h2 {
 	margin-top: 15px;
 }
 
-.msg-suc {
+.msg-suc, .msg-err {
 	top: 30px;
 	padding: 15px 0px;
 	padding-left: 15px;
@@ -71,6 +71,14 @@ form h2 {
 	margin-bottom: 25px;
 	
 	font-size: 16px;
+}
+
+.msg-suc {
+	border-left: 3px solid green;	
+}
+
+.msg-err {
+	border-left: 3px solid orange;	
 }
 
 nav ul {
@@ -179,11 +187,11 @@ td div, td {
 }
 
 .text-right {
-	text-align: right;
+	text-align: right !important;
 }
 
 .text-left {
-	text-align: left;
+	text-align: left !important;
 }
 
 .text-center {
