--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/Layout.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/Layout.html
@@ -37,7 +37,7 @@
 
 
 	</div>
-	<nav class="col-offset-2 col-8">
+	<nav class="col-offset-1 col-10">
 		<ul class="col-12">
 			<li><a th:href="${'/'}">Home</a></li>
 			<li><a href='#'>Serviços</a></li>
@@ -54,7 +54,7 @@
 		</ul>
 	</nav>
 
-	<div layout:fragment="content"></div>
+	<div layout:fragment="content" class="col-offset-1 col-10 content"></div>
 
 	<footer class="footer col-12">
 		<p layout:fragment="custom-footer">
