--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
@@ -11,66 +11,63 @@
 
 	<div layout:fragment="content">
 
-		<div class="col-offset-2 col-8 content">
+		<div th:if="${mensagem != null} ">
+			<h1 th:text="${mensagem}" class="msg-suc"></h1>
+		</div>
 
-			<div th:if="${mensagem != null} ">
-				<h1 th:text="${mensagem}" class="msg-suc"></h1>
-			</div>
-
-			<h1 class="titulo col-offset-1">Clientes</h1>
+		<h1 class="titulo col-offset-1 col-11">Clientes</h1>
 
 
-			<div class="col-12">
-				<form method="GET">
+		<div class="buscar col-12">
+			<form method="GET">
 
-					<p>
-						<label class="control-label col-2">Nome</label> <input
-							name="term" type="text" />
-					</p>
+				<p>
+					<label class="control-label col-2">Nome</label> <input name="term"
+						type="text" th:placeholder="Digite sua busca" />
+				</p>
 
-					<button type="submit">Buscar</button>
+				<button type="submit">Buscar</button>
 
-				</form>
-			</div>
+			</form>
+		</div>
 
-			<div th:if="${not #lists.isEmpty(clientes)}">
-				<table class="border-default col-offset-1 col-10">
+		<div th:if="${not #lists.isEmpty(clientes)}">
+			<table class="border-default col-offset-1 col-10">
 
-					<tr>
-						<th class="border-default col-4 text-left">Nome</th>
-						<th class="border-default col-2">CPF</th>
-						<th class="border-default col-3">Situação</th>
-						<th class="border-default col-3">Ações</th>
-					</tr>
+				<tr>
+					<th class="border-default col-4 text-left">Nome</th>
+					<th class="border-default col-2">CPF</th>
+					<th class="border-default col-3">Situação</th>
+					<th class="border-default col-3">Ações</th>
+				</tr>
 
-					<tr th:each="cliente : ${clientes}">
-						<td th:text="${cliente.nome}" class="border-default col-4"></td>
-						<td th:text="${cliente.cpf}"
-							class="border-default col-2 text-center"></td>
-						<td th:text="${cliente.situacao}"
-							class="border-default col-3 text-center"></td>
-						<td class="col-3">
+				<tr th:each="cliente : ${clientes}">
+					<td th:text="${cliente.nome}" class="border-default col-4"></td>
+					<td th:text="${cliente.cpf}"
+						class="border-default col-2 text-center"></td>
+					<td th:text="${cliente.situacao}"
+						class="border-default col-3 text-center"></td>
+					<td class="col-3">
 
-							<div class="border-default col-4 icon-link-container">
-								<a th:href="${'/clientes/' + cliente.id}"><img
-									src="http://www.honestmachines.com/images/icon_details.png"
-									title="detalhes" /></a>
-							</div>
-							<div class="border-default col-4 icon-link-container">
-								<a th:href="${'/clientes/editar/' + cliente.id}"><img
-									src="http://iconizer.net/files/Gnome_icons/orig/gtk-edit.png"
-									title="editar" /></a>
-							</div>
-							<div class="border-default col-4 icon-link-container">
-								<a th:href="${'/clientes/remover/' + cliente.id}"><img
-									src="http://findicons.com/files/icons/1033/retrofukation/24/edit_delete.png"
-									title="remover" /></a>
-							</div>
-						</td>
-					</tr>
+						<div class="border-default col-4 icon-link-container">
+							<a th:href="${'/clientes/' + cliente.id}"><img
+								src="http://www.honestmachines.com/images/icon_details.png"
+								title="detalhes" /></a>
+						</div>
+						<div class="border-default col-4 icon-link-container">
+							<a th:href="${'/clientes/editar/' + cliente.id}"><img
+								src="http://iconizer.net/files/Gnome_icons/orig/gtk-edit.png"
+								title="editar" /></a>
+						</div>
+						<div class="border-default col-4 icon-link-container">
+							<a th:href="${'/clientes/remover/' + cliente.id}"><img
+								src="http://findicons.com/files/icons/1033/retrofukation/24/edit_delete.png"
+								title="remover" /></a>
+						</div>
+					</td>
+				</tr>
 
-				</table>
-			</div>
+			</table>
 		</div>
 	</div>
 
