feat(Lavanderia): adicionar regras de negócio.

--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/Layout.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/Layout.html
@@ -66,6 +66,9 @@
 
 	</footer>
 
+	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script layout:fragment="scripts" th:src="@{~/script.js}"></script>
 </body>
 
 </html>
