--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/lista.html
@@ -24,7 +24,7 @@
 					<th class="border-default col-2">CPF</th>
 					<th class="border-default col-2 text-left">Cliente</th>
 					<th class="border-default col-2">Data inclusão</th>
-					<th class="border-default col-2">Valor total(R$)</th>
+					<th class="border-default col-2">Valor bruto(R$)</th>
 					<th class="border-default col-2">Situação</th>
 					<th class="border-default col-2">Ações</th>
 				</tr>
